--- a/SpMVC_27_Secure/src/main/webapp/WEB-INF/spring/db.connection.properties
+++ b/SpMVC_27_Secure/src/main/webapp/WEB-INF/spring/db.connection.properties
@@ -1,2 +1,2 @@
-mysql.username=secur
-mysql.password=secur
+mysql.username=ENC(/d90kL8sQ3Tg/DEnty0sLA==)
+mysql.password=ENC(+2/x1kEpU29xVMzFnqRH+w==)
