--- a/SpMVC_27_Secure/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC_27_Secure/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,19 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
+	<!-- 
+	db-auth-context의 dataSource를 나머지 context에서 쓰기 위해
+	context들을 순서대로 나열해주기 
+	-->
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/*-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/db-auth-context.xml
+			/WEB-INF/spring/security-context.xml
+			/WEB-INF/spring/mybatis-context.xml
+			/WEB-INF/spring/root-context.xml
+		</param-value>
 	</context-param>
 	
 	<!-- security 와 관련된 filter는 반드시 여기에 작성 -->
