--- a/SpMVC_27_SecureV4/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC_27_SecureV4/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,7 @@
 			/WEB-INF/spring/db-auth-context.xml
 			/WEB-INF/spring/security-context.xml
 			/WEB-INF/spring/mybatis-context.xml
+			/WEB-INF/spring/naver-mail2-context.xml
 			/WEB-INF/spring/root-context.xml
 		</param-value>
 	</context-param>
